--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     <title>Document</title>
 </head>
 <style>
-
+    *{
+        box-sizing: border-box;
+    }
+    body{
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+    }
 </style>
 <body>
     <canvas id="game" class="game"></canvas>
