--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+<style>
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+    #titulo{
+        font-family: 'Press Start 2P', cursive;
+        position: absolute;
+        top: 10px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+</style>
 <body>
+    <h1 id="titulo">E.T. Games</h1>
     <canvas id="game" class="game"></canvas>
 </body>
 <script src="./script.js"></script>
